Sideservices/deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: rabbitmq
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3
        ports:
        - containerPort: 5672
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 100m
