Sideservices/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  ports:
    - name: "rabbitmq-port"
      port: 5672
      targetPort: 5672
  selector:
    app: rabbitmq
  type: ClusterIP
