Sideservices/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rollasphere-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api/*
        backend:
          serviceName: gke-gatewayservice
          servicePort: 80
      - path: /*
        backend:
          serviceName: gke-scoreboardfrontend
          servicePort: 80
